--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,7 +7,32 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+button {
+  margin: 20px;
+  font-size: 12px;
+  border: 1px solid black;
+  background-color: lightgray;
+  border-radius: 3%;
+}
+
+button[disabled] {
+  background-color: red;
+}
+
+button[disabled]:hover {
+  background-color: red;
+  color: white;
+}
+
+.tiny {
+  font-size: 8px;
+}
+
+@media screen and (min-width: 760px) {
+  .tiny {
+    font-size: 10px;
+  }
+
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
