--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,6 +2,22 @@
   text-align: center;
 }
 
+select,
+textarea,
+input[type="”text”"],
+input[type="”password”"],
+input[type="”datetime”"],
+input[type="”datetime-local”"],
+input[type="”date”"],
+input[type="”month”"],
+input[type="”time”"],
+input[type="”week”"],
+input[type="”number”"],
+input[type="”email”"],
+input[type="”url”"] {
+  font-size: 16px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
