--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -16,19 +16,24 @@ input[type="”number”"],
 input[type="”email”"],
 input[type="”url”"] {
   font-size: 16px;
+  font-family: "Special Elite", cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+option {
+  font-family: "Merriweather", serif;
 }
 
 button {
+  width: 250px;
+  height: 50px;
   margin: 20px;
-  font-size: 12px;
-  border: 1px solid black;
-  background-color: lightgray;
-  border-radius: 3%;
+  font-size: 18px;
+  border-color: black;
+  color: rgb(218, 255, 251);
+  background-color: black;
+  border-radius: 4px;
+  font-family: "Merriweather", serif;
+  font-weight: 700;
 }
 
 button[disabled] {
@@ -41,14 +46,10 @@ button[disabled]:hover {
 }
 
 .tiny {
-  font-size: 8px;
+  font-size: 10px;
 }
 
 @media screen and (min-width: 760px) {
-  .tiny {
-    font-size: 10px;
-  }
-
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
