--- a/src/components/HaikuForm/HaikuForm.css
+++ b/src/components/HaikuForm/HaikuForm.css
@@ -7,10 +7,15 @@
 }
 
 select {
-  width: 100px;
-  margin: 0 0 10px 3px;
+  width: 145px;
+  margin: 3px 0 20px 0;
   border: 1px solid black;
   border-radius: 1%;
+}
+
+.navA {
+  font-size: 25px;
+  vertical-align: baseline;
 }
 
 form {
@@ -18,6 +23,23 @@ form {
   width: 75%;
   display: flex;
   flex-direction: column;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 30px;
+}
+
+.HaikuForm__buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media screen and (min-width: 760px) {
