--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -24,8 +24,13 @@ option {
 }
 
 button {
-  width: 250px;
-  height: 50px;
+  cursor: pointer;
+  box-shadow: 0 2.8px 2.2px rgba(000, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+  width: 175px;
+  height: 40px;
   margin: 20px;
   font-size: 18px;
   border-color: black;
@@ -34,6 +39,12 @@ button {
   border-radius: 4px;
   font-family: "Merriweather", serif;
   font-weight: 700;
+}
+
+button:hover {
+  background-color: rgb(218, 255, 251);
+  color: black;
+  border-color: rgb(218, 255, 251);
 }
 
 button[disabled] {
@@ -50,31 +61,10 @@ button[disabled]:hover {
 }
 
 @media screen and (min-width: 760px) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  button {
+    width: 250px;
+    height: 50px;
+    margin: 20px;
+    font-size: 18px;
   }
 }
