--- a/src/components/HaikuBox/HaikuBox.css
+++ b/src/components/HaikuBox/HaikuBox.css
@@ -46,7 +46,7 @@
 }
 
 .shiftp {
-  margin: 0 10px;
+  margin: 25px 10px 0;
 }
 
 .cont_haikubox {
@@ -76,5 +76,29 @@
     opacity: 0.2;
     top: 10;
     z-index: -1;
+  }
+}
+
+@media screen and (min-width: 540px) {
+  .haikubox2 {
+    width: auto;
+  }
+
+  .haikubox2 p {
+    margin: 20px;
+    font-size: 22px;
+  }
+}
+
+@media screen and (min-width: 790px) {
+  .savebox {
+    width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .haikubox2 p {
+    margin: 18px;
+    font-size: 20px;
   }
 }
