--- a/src/components/HaikuList/HaikuList.css
+++ b/src/components/HaikuList/HaikuList.css
@@ -29,11 +29,11 @@
   margin-right: auto;
   height: 300px;
   width: 290px;
-  font-size: 18px;
+  font-size: 24px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-family: "Special Elite", cursive;
+  font-family: "Special Elite", "cursive";
 }
 
 .haikubox3::after {
@@ -57,7 +57,7 @@
 
 .haikulist_box:nth-child(4n + 2) {
   background-image: url(../../images/watercolour_splat_.jpg);
-  background-size: 100px;
+  background-size: 70px;
   background-repeat: no-repeat;
   background-position-y: 10px;
 }
@@ -96,10 +96,20 @@ h1 {
 .line {
   margin: 0 5%;
 }
+
+@media screen and (min-width: 540px) {
+  .haikubox3 {
+    width: auto;
+  }
+
+  .haikubox3 p {
+    margin: 20px;
+    font-size: 22px;
+  }
+}
+
 @media screen and (min-width: 760px) {
   .cont_haikulist {
-    font-size: 15px;
-    background-color: whitesmoke;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -109,30 +119,25 @@ h1 {
     margin: auto;
   }
 
+  .haikubox3 p {
+    margin: 18px;
+    font-size: 20px;
+  }
+
+  .haikulist_h {
+    margin: 25px 0;
+  }
+
+  .haikulist_h p {
+    margin: 12px;
+    font-family: "Special Elite", "cursive";
+    font-size: 12px;
+  }
+
   .haikulist_box {
-    border: solid black 2px;
+    font-size: 10px;
     width: 225px;
     height: 180px;
-    margin-bottom: 20px;
-  }
-
-  .haikubox2 {
-    margin-top: 20px;
-    height: 300px;
-    width: 340px;
-    font-size: 24px;
-  }
-
-  .haikubox2::after {
-    height: 360px;
-    width: 100%;
-    content: "";
-    background: url(../../images/watercolour_splat_.jpg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom;
-    opacity: 0.2;
-    top: 10;
-    z-index: -1;
+    margin: 0 10px 20px;
   }
 }
