--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -6,6 +6,11 @@
 }
 
 .nav_shape {
+  padding-bottom: 30px;
+  box-shadow: 0 2.8px 2.2px rgba(000, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
   margin: auto;
   background-color: black;
   background-size: fill;
@@ -27,15 +32,15 @@
 a {
   font-family: "Special Elite", "cursive";
   text-decoration: none;
-  color: thistle;
+  color: rgb(218, 164, 218);
 }
 
 .btn_box button {
   height: 28px;
   font-size: 15px;
-  border-color: rgb(199, 228, 225);
-  color: darkblue;
-  background-color: rgb(199, 228, 225);
+  color: black;
+  background-image: linear-gradient(thistle, rgb(199, 228, 225));
+  box-shadow: none;
 }
 
 .slant {
@@ -49,15 +54,16 @@ a {
 
 .homep {
   text-align: left;
-  margin: 175px 5% 5%;
+  margin: 225px 5% 5%;
   font-size: 20px;
   background-color: rgba(211, 211, 211, 0.479);
-  padding: 5%;
+  padding: 3%;
 }
 
 @media screen and (min-width: 375px) {
   .btn_box button {
     font-size: 16px;
+    margin-right: 20px;
   }
 
   .slant {
@@ -66,5 +72,51 @@ a {
 
   .hgbutton {
     width: 150px;
+  }
+}
+
+@media screen and (min-width: 535px) {
+  .nav_shape {
+    margin-left: 0;
+    background-size: fill;
+    background-position: left;
+    background-repeat: no-repeat;
+    position: fixed;
+    top: -200px;
+    left: -100px;
+    width: 100%;
+    height: 400px;
+    margin-bottom: 20px;
+    border-radius: 50%;
+  }
+
+  .home_header {
+    text-align: left;
+    margin-left: 180px;
+  }
+
+  .btn_box {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 160px;
+  }
+}
+
+@media screen and (min-width: 760px) {
+  .homep {
+    font-size: 16px;
+    margin-left: 100px;
+    margin-right: 100px;
+    padding: 5%;
+  }
+
+  .home_header {
+    text-align: left;
+    margin-left: 225px;
+    font-size: 2.5em;
+  }
+
+  .btn_box {
+    margin-left: 205px;
   }
 }
